[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mombeu"
version = "0.1.3"
description = "OpenAI Python SDK wrapper with local LLM continuation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["openai", "llm", "wrapper", "huggingface", "continuation"]

dependencies = [
    "openai>=1.0.0",
    "transformers>=4.40.0",
    "huggingface_hub>=0.23.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mombeu*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
